--- a/assets/css/form.css
+++ b/assets/css/form.css
@@ -1,3 +1,6 @@
+:root {
+  --tomato-color: #ff7373;
+}
 .form-group {
   display: flex;
   flex-direction: column;
@@ -24,7 +27,7 @@
 }
 .form_group > input:focus,
 .form_group > select:focus {
-  border: 1px solid #ff7373;
+  border: 1px solid var(--tomato-color);
 }
 .form_group > button {
   width: 100%;
@@ -33,7 +36,11 @@
   border: 1px solid transparent;
   border-radius: 5px;
   color: #fff;
-  background-image: linear-gradient(-90deg, #ff7373 0%, #fddb33 100%);
+  background-image: linear-gradient(
+    -90deg,
+    var(--tomato-color) 0%,
+    #fddb33 100%
+  );
   border-radius: 5px;
   border: 0;
   height: 45px;
@@ -42,5 +49,5 @@
   cursor: pointer;
 }
 strong {
-  color: #ff7373;
+  color: var(--tomato-color);
 }
